Fixed alignment error in SortingTab.module.scss

--- a/src/components/SortingTab/SortingTab.module.scss
+++ b/src/components/SortingTab/SortingTab.module.scss
@@ -1,14 +1,14 @@
 @import '../../config';
 
 .SortingTab {
-  display: inline-block;
+  display:flex;
+  align-items: center;
+  justify-content: center;
   background-color: $true-white-color;
   padding: 13px 10px;
-  font-size: 16px;
   border: 1px solid $light-gray-color-2;
   border-radius: $border-radius-default;
   cursor: pointer;
-  text-align: center;
   flex-basis: ($right-column-width - 1px) / 2;
   
   &:first-child {
